fixed the inline-block spacing
By setting the margin-right on an inline-block element to -3.5px,
the spacing in between goes away. It's a hack, but we will use it
in the meantime.

--- a/flowState/css/flowState.css
+++ b/flowState/css/flowState.css
@@ -99,6 +99,7 @@ main p {
   display: inline-block;
   position: relative;
   margin: 0;
+  margin-right: -3.5px;
   border: 1px solid dodgerblue;
 }
 
